# TorchCS-Logger

./: .gitignore  CMakeLists.txt  conanfile.py  readme.md
.github/workflows/: ci-test.yml  ci.yml
cmake/: fmt.cmake  spdlog.cmake
conan/recipes/: build.py
conan/recipes/TorchCS-Logger/: build.py  conanfile.py
include/: LogColor.hpp  LogLevel.hpp  LoggerManager.hpp
include/TorchCS-Logger/: CustomFormatter.hpp  LoggerManager.hpp  LoggerOptions.hpp
include/torchcs_logger/: logger_manager.hpp
scripts/: build_cmake.bat  build_cmake.sh  build_local_conan.bat  build_local_conan.sh
src/: CustomFormatter.cpp  LogColor.cpp  LoggerManager.cpp  LoggerOptions.cpp  custom_formatter.cpp  log_color.cpp  logger_manager.cpp  logger_options.cpp
tests/: main.cpp
tests/your_project/src/: main.cpp
